lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:1: error: overriding method initialize in class LanderEntity of type ()Unit;
 method initialize has incompatible type
override def initialize():Array[Int] = {
             ^