lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.code
override def initialize():Array[Int] = {
	var Liste = getSol()
	var Segment = new Array[Int](2)
	var sens = 1
	for (i <- 0 to Liste.length-2) {
		if (Liste(i).y==Liste(i+1).y) {
			Segment(0)=i
			Segment(1)=i+1
		}
	}
	return Segment
	
	
}

  override def step() {
  }
